--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,105 @@
 <!DOCTYPE html>
-<html>
+<html ng-app='musiComp'>
 <head>
 	<title>Musicomp</title>
+	
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="This app will help musicians plan out the structure of a song.">
+	<meta name="keywords" content="music, planner, song map">
+
+	<!-- Libraries -->
+	<script src="https://ajax.googleapis.com/ajax/libs/	angularjs/1.2.25/angular.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/	angularjs/1.2.25/angular-route.min.js"></script>
 </head>
 <body>
-	<h1>hello world</h1>
+	<div id="container">
+	<header>
+		<a href="index.html" id="home-logo">
+			<h1>MusiComp</h1>
+		</a>
+
+		<h2>Progress Tracker here</h2>
+	</header>
+	
+	
+		<div id="define-song" ng-controller='MainController'>
+			
+			<form name='define-form' class="form" novalidate>
+				<fieldset>
+					<legend>Define Your Song</legend>
+					<p class="song_title">
+						<label for="song_title">Song Title:</label>
+						<input type="text" name="song-title" id="song_title" ng-model='song.title' required>
+					</p>
+					<div ng-show ='define-form.$submitted'>
+						<div ng-show ="form.song-title.$error.required">Please enter a song title</div>
+					</div>
+					<p class="bpm">
+						<label for="bpm">BPM (Beats per Minute):</label>
+						<input type="number" name="bpm" min="30" max="200" 	step="1" value="60" ng-model='song.bpm' required>
+					</p>
+					<p class="time_sig">
+						<label for="time_sig">Time Signature:</label>
+						<select name="time_sig" ng-model='song.timeSig'>
+							<option value="4/4">4/4</option>
+							<option value="3/4">3/4</option>
+							<option value="2/4">2/4</option>
+							<option value="6/8">6/8</option>
+							<option value="7/8">7/8</option>
+						</select required>
+					</p>
+					<p class="num_instr">
+						<label for="num_instr">Number of Instruments:</label>
+						<input type="number" name="num_instr" min="1" max="8" 	step="1" value="4" ng-model='song.numInstruments' required>
+					</p>
+					<p class="submit">
+						<input type="submit" value="Create" ng-click='submit(song)'>
+					</p>
+				</fieldset>				
+			</form>	
+			<p>song = {{ song | json }}</p>
+			<p>test = {{ test | json }}</p>
+		</div>
+		<div id="open-existing-song">
+			<table id="file-dir">
+				<caption>Open An Existing Song</caption>
+				<tr>
+				  <th>Filename</th>
+				  <th>Date Modified</th>
+				  <th>Modified By</th>
+				  <th>Date Created</th>
+				</tr>
+				<tr>
+				  <td><a href="###">Song1</a></td>
+				  <td>03/14/72</td>
+				  <td>me</td>
+				  <td>03/14/72</td>
+				</tr>
+				<tr>
+				  <td><a href="###">Song2</a></td>
+				  <td>03/14/12</td>
+				  <td>Dave French</td>
+				  <td>03/14/12</td>
+				</tr>
+				<tr>
+				  <td><a href="###">Song3</a></td>
+				  <td>03/14/15</td>
+				  <td>Tom Smith</td>
+				  <td>03/14/15</td>
+				</tr>
+			</table>
+
+		</div>
+	</div>
+
+<!-- Modules -->
+<script src="js/app.js"></script>
+
+<!-- Controllers -->
+<script src="js/controllers/MainController.js"></script>
+
+<!-- Services -->
+
+
 </body>
 </html>
