last attempt to get routes working

--- a/src/_main.html
+++ b/src/_main.html
@@ -1,4 +1,4 @@
-<div id="define-song" data-ng-controller='MainCtrl'>
+<div id="define-song">
 			
 			<form name='define-form' class="form" novalidate>
 				<fieldset>
@@ -66,4 +66,3 @@
 			</table>
 
 		</div>
-	</div>
