--- a/src/defineModule/_define.html
+++ b/src/defineModule/_define.html
@@ -40,7 +40,7 @@
               Add Instrument
             </md-tooltip>
      		</md-button>
-			<md-button class="md-raised md-primary" data-ng-click='submit(song)'>Next</md-button>
+			<md-button class="md-raised md-primary" data-ng-click='next(song)'>Next</md-button>
 		</section>
     </form>
 	</md-content>
