refactored create new section

--- a/src/arrangeModule/_arrange.html
+++ b/src/arrangeModule/_arrange.html
@@ -51,3 +51,7 @@
  		</div>
   	</md-card>
  </div>
+
+<div layout='row' layout-align='end center' class='done-button'>
+  <md-button data-ng-click='doneGoHome(song)' class="md-raised md-primary">Done</md-button>
+</div>
