--- a/src/createModule/_create.html
+++ b/src/createModule/_create.html
@@ -108,7 +108,7 @@
            			<md-tooltip md-direction="bottom">Remove Beat</md-tooltip>
           		</md-button>
 
-          		<md-button aria-label="create new section" class="md-accent md-fab md-raised md-mini" data-ng-click='newSection()' >
+          		<md-button aria-label="create new section" class="md-accent md-fab md-raised md-mini" data-ng-click='newSection($scope)' >
             		<md-icon class='material-icons'>note_add</md-icon>
             		<md-tooltip md-direction="bottom">New Section</md-tooltip>
           		</md-button>
