--- a/src/index.html
+++ b/src/index.html
@@ -19,31 +19,14 @@
 </head>
 <body layout='column'>
 		<md-toolbar layout="row" layout-align='start center' class='md-whiteframe-6dp'>
-			<md-button class="md-icon-button md-primary md-tall" aria-label="Settings" flex='10' ng-controller='OpenCtrl' ng-click='toggleMenu()'>
-        		<i class='material-icons md-48 md-light'>menu</i>
+			<md-button class="md-icon-button md-primary" aria-label="Home" flex='10' ng-controller='OpenCtrl' ng-click='goHome()'>
+        		<i class='material-icons md-48 md-light'>home</i>
       		</md-button>
 			<h1 class='title' flex='80'>MusiComp</h1>
 			<span flex='10'></span>
 		</md-toolbar>
 
-		<div layout='row' flex>
-			<md-sidenav md-component-id='left' layout='column' class='md-sidenav-left md-whiteframe-z2' >
-				<md-toolbar class='md-primary'>
-					
-					<h2 class='menu-title'>Menu</h2>
-					
-				</md-toolbar>
-				<md-list ng-controller='OpenCtrl'>
-					<md-list-item ng-repeat='item in menuItems'>
-					 	<i class='material-icons'>{{item.iconName}}</i>
-					 	<a href="{{item.href}}" class='menu-item'><span ng-click='toggleMenu()'>{{item.name}}</span></a>
-					</md-list-item>
-				</md-list>
-			</md-sidenav>		
-		
-			<div data-ng-view flex></div>
-
-		</div>			
+		<div data-ng-view flex></div>		
 
 <script src="lib.min.js"></script>
 <script src="app.min.js"></script>
